# bitrix-api-test

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: __init__.py
app/api/v1/: endpoints.py  routers.py
app/controllers/: bitrix_controller.py
app/core/: config.py
app/schemas/: bitrix_schemas.py
app/services/: bitrix_service.py
