[tool.poetry]
name = "bitrix-api"
version = "0.1.0"
description = "Bitrix24 API Integration"
authors = ["Kurkov Nikita <zzznikurzzz@gmail.com>"]
license = "MIT"
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.116.1"
uvicorn = { extras = ["standard"], version = "^0.35.0" }
aiohttp = "^3.12.15"
pydantic = "^2.11.7"
python-dotenv = "^1.1.1"
anyio = "^4.10.0"
starlette = "^0.47.3"
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"